group messages mobile

--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -11285,6 +11285,7 @@ img.emojioneemoji {
 }
 
 .bb-panel-footer {
+  display: none;
   border-top: 1px solid #E7E9EC;
   padding: 10px 20px;
   text-align: right;
