--- a/src/bp-templates/bp-nouveau/common-styles/_bp_groups_messages.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_groups_messages.scss
@@ -414,6 +414,10 @@ span.icons:before {
     }
 }
 
+#group-messages-container .bp-message-dropdown-options-hide {
+	display: none;
+}
+
 .hr-text {
 	line-height: 1em;
 	position: relative;
