--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -11709,6 +11709,10 @@ span.icons:before {
   text-decoration: underline;
 }
 
+#group-messages-container .bp-message-dropdown-options-hide {
+  display: none;
+}
+
 .hr-text {
   line-height: 1em;
   position: relative;
