--- a/src/bp-templates/bp-nouveau/common-styles/_bp_groups_messages.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_groups_messages.scss
@@ -34,6 +34,18 @@
 	}
 }
 
+.bb-panel-head {
+    border-bottom: 1px solid #E7E9EC;
+    padding: 14px 20px;
+    position: relative;
+}
+
+.add-more-members {
+    position: absolute;
+    right: 20px;
+    top: 20px;
+}
+
 #bp-group-message-content p {
     margin-bottom: 1rem;
 }
