--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -11330,6 +11330,18 @@ img.emojioneemoji {
   }
 }
 
+.bb-panel-head {
+  border-bottom: 1px solid #E7E9EC;
+  padding: 14px 20px;
+  position: relative;
+}
+
+.add-more-members {
+  position: absolute;
+  right: 20px;
+  top: 20px;
+}
+
 #bp-group-message-content p {
   margin-bottom: 1rem;
 }
