--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -11725,6 +11725,68 @@ span.icons:before {
   display: none;
 }
 
+.bp-group-message-switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+/* Hide default HTML checkbox */
+.bp-group-message-switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.bp-group-message-slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.bp-group-message-slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  right: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.bb-groups-messages-left-inner input:checked + .bp-group-message-slider {
+  background-color: #2196F3 !important;
+}
+
+.bb-groups-messages-left-inner .input:focus + .bp-group-message-slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+.bb-groups-messages-left-inner input:checked + .bp-group-message-slider:before {
+  -webkit-transform: translateX(-26px);
+  -ms-transform: translateX(-26px);
+  transform: translateX(-26px);
+}
+
+/* Rounded sliders */
+.bp-group-message-slider.bp-group-message-round {
+  border-radius: 34px;
+}
+
+.bp-group-message-slider.bp-group-message-round:before {
+  border-radius: 50%;
+}
+
 .hr-text {
   line-height: 1em;
   position: relative;
